all sections finished and portfolio images correct in tablet but need to fix links kerning and spacing across the pa to fix links kerning and spacing

--- a/_sass/_includes/_component__project-card.scss
+++ b/_sass/_includes/_component__project-card.scss
@@ -16,12 +16,20 @@
     display: block;
   }
 
+  .image__frame {
+    margin-bottom: 16px;
+    width: 100%;
+    border: dotted blue;
+  }
+  .image__frame:before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+  }
   .project__image {
     width: 100%;
-    height: 220px;
-    background-size: cover;
-    background-position: center;
-    margin-bottom: 16px;
+    height: auto;
+    /*background-size: contain;*/
   }
 
   .project__date {
@@ -29,26 +37,43 @@
   }
 
   .project__title {
-    margin-bottom: 16px;
+    margin-bottom: 0px;
   }
 
   .project__subtitle {
-    margin-bottom: 16px;
+    margin-bottom: 0px;
   }
 
-  @include mq("460px") {
+  /*@include mq("460px") {
     .project__image {
       height: 250px;
     }
-  }
+  }*/
 
   @include mq(tabletp) {
-    .project__title {
-      margin-bottom: 32px;
-    }
+    .project__image {
+      height: auto;
+      width: auto;
+      max-height: 500px;
 
-    .project__subtitle {
-      margin-bottom: 32px;
+      img {
+        /*height: 100%;*/
+        /*width: 100%;*/
+        max-height: 500px
+        /*max-width: 100%;*/
+      }
+    }
+  }
+
+  @include mq(laptop) {
+    .project__image {
+      width: 100%;
+      height: 220px;
+      background-size: cover;
+
+      background-repeat: no-repeat;
+      background-position: center;
+      background-position: left bottom;
     }
   }
 }
