--- a/_sass/_includes/_section__hero.scss
+++ b/_sass/_includes/_section__hero.scss
@@ -19,8 +19,8 @@
 	a.navbar-link::before { 
 		display: block; 
 		content: " "; 
-		margin-top: -1000px; 
-		height: 1000px; 
+		margin-top: -10000px; 
+		height: 10000px; 
 		visibility: hidden; 
 		pointer-events: none;
 	}
